; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_editor.c_set_ns_fontname.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_editor.c_set_ns_fontname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSSTATE_ATTRIBUTE = common dso_local global i32 0, align 4
@NSCMD_FONTFACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @set_ns_fontname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_ns_fontname(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32* (...) @create_nscommand_params()
  store i32* %6, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = load i32, i32* @NSSTATE_ATTRIBUTE, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @nsICommandParams_SetCStringValue(i32* %7, i32 %8, i8* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @NSCMD_FONTFACE, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @do_ns_command(i32* %11, i32 %12, i32* %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @nsICommandParams_Release(i32* %15)
  ret void
}

declare dso_local i32* @create_nscommand_params(...) #1

declare dso_local i32 @nsICommandParams_SetCStringValue(i32*, i32, i8*) #1

declare dso_local i32 @do_ns_command(i32*, i32, i32*) #1

declare dso_local i32 @nsICommandParams_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
